--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -53,7 +53,7 @@ body, p, li {
 
 /* BUTTONS */
 .button {
-    background-color: #6A0F1A !important;
+    background-color: #aea691 !important;
     color: #F3EFE8 !important;
     border: none !important;
 }
